force-app/main/default/objects/Team_Dependency__c/fields/Child_User_Story_Release__c.field-meta.xml
<CustomField>
    <fullName>Child_User_Story_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child User Story Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>User Story Dependencies (Child User Story Release)</relationshipLabel>
    <relationshipName>User_Story_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>