force-app/main/default/objects/Team_Dependency__c/fields/Dependency_Status__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Status__c</fullName>
    <inlineHelpText>Status of the dependency between two User Stories. Example: Prioritized, Committed, or Completed. You can manually edit this field. However, it will be automatically marked as Completed when you mark the Parent User Story to Completed.</inlineHelpText>
    <label>Dependency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>More Info Needed</fullName>
            </value>
            <value>
                <fullName>Prioritized</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>