force-app/main/default/objects/Team_Dependency__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent User Story Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>User Story Dependencies</relationshipLabel>
    <relationshipName>Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>