force-app/main/default/objects/Team_Dependency__c/fields/Skip_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Skip_Dependency__c</fullName>
    <formula>OR( ISPICKVAL( Dependency_Status__c ,&apos;Completed&apos;), ISPICKVAL( Dependency_Status__c ,&apos;Deferred&apos;), ISPICKVAL( Dependency_Status__c ,&apos;Never&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is set to True whenever a Dependency Status is set to Completed, Deferred, or Never.</inlineHelpText>
    <label>Skip Dependency</label>
    <type>Checkbox</type>
</CustomField>